RESOLVED FIXED307149
[GTK][WPE] WebGL doesn't work with accelerated compositing disabled
https://bugs.webkit.org/show_bug.cgi?id=307149
Summary [GTK][WPE] WebGL doesn't work with accelerated compositing disabled
Carlos Garcia Campos
Reported 2026-02-06 01:21:05 PST
The non-composited frame renderer uses gl to render the page in the main thread and WebGL is also using its own gl context in the main thread causing that sometimes GraphicsContextSkia is used with the wrong current context.
Attachments
Carlos Garcia Campos
Comment 1 2026-02-06 01:22:59 PST
EWS
Comment 2 2026-02-06 03:49:01 PST
Committed 306933@main (6bb40a3ab599): <https://commits.webkit.org/306933@main> Reviewed commits have been landed. Closing PR #58035 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.