[GTK][WPE] WebGL doesn't work with accelerated compositing disabled https://bugs.webkit.org/show_bug.cgi?id=307149

Reviewed by Adrian Perez de Castro.

The non-composited frame renderer uses gl to render the page in the main
thread and WebGL is also using its own gl context in the main thread
causing that sometimes GraphicsContextSkia is used with the wrong
current context. We need to make sure GraphicsContextSkia makes the skia
gl context current when needed like we do when rendering the canvas.

* Source/WebCore/platform/graphics/skia/GraphicsContextSkia.cpp:
(WebCore::GraphicsContextSkia::makeGLContextCurrentIfNeeded const):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/NonCompositedFrameRenderer.cpp:
(WebKit::NonCompositedFrameRenderer::display):

Canonical link: https://commits.webkit.org/306933@main